--- a/tasks/erlang-rebar/release.yaml
+++ b/tasks/erlang-rebar/release.yaml
@@ -42,7 +42,7 @@ spec:
           resources: {}
           script: |
             #!/usr/bin/env sh
-            jx-release-version --tag --debug > VERSION
+            jx-release-version --debug -previous-version=from-tag > VERSION
         - image: ghcr.io/jenkins-x/jx-release-version:2.6.10
           name: next-version-uat
           script: |
