--- a/tasks/jira/release.yaml
+++ b/tasks/jira/release.yaml
@@ -38,17 +38,13 @@ spec:
       git log $(git describe --abbrev=0 --tags 2> /dev/null || git rev-list --max-parents=0 HEAD) | \
         grep -oE "$JIRA_PROJECT-[[:digit:]]{1,}" | sort | uniq | \
         paste -sd , - | awk '{print "\"" $0 "\""}' > JIRA_ISSUES
-  - envFrom:
-    - secretRef:
-        name: jx-boot-job-env-vars
-        optional: true
-    image: curlimages/curl:7.72.0
+  - image: ghcr.io/jenkins-x/jx-boot:3.10.124
     name: invoke-jira-webhook
     resources: {}
     script: |
-      #!/bin/sh
+      #!/usr/bin/env sh 
       source .jx/variables.sh
-      set -x
       export RELATED_JIRA_ISSUES=$(cat ./JIRA_ISSUES)
       echo JIRA Tickets are: $RELATED_JIRA_ISSUES
+      set -x      
       curl -XPOST -H "Content-Type: application/json" -d '{"data": {"version": "'"$APP_NAME - $VERSION"'","projectname": "'"$JIRA_PROJECT"'"}, "issues": ['"$RELATED_JIRA_ISSUES"']}' $JIRA_WEBHOOK_URL
