--- a/tasks/erlang-rebar/release.yaml
+++ b/tasks/erlang-rebar/release.yaml
@@ -42,12 +42,12 @@ spec:
           resources: {}
           script: |
             #!/usr/bin/env sh
-            jx-release-version --debug -previous-version=from-tag > VERSION
+            jx-release-version -tag -debug -previous-version=from-tag:"^v\d+\.\d+\.\d+$" > VERSION
         - image: ghcr.io/jenkins-x/jx-release-version:2.6.10
           name: next-version-uat
           script: |
             #!/usr/bin/env sh
-            jx-release-version -debug -next-version=semantic:strip-prerelease -output-format "{{.Major}}.{{.Minor}}.{{.Patch}}"-UAT-$BUILD_ID > VERSION            
+            jx-release-version -debug -previous-version=from-tag:"^v\d+\.\d+\.\d+$" -next-version=semantic:strip-prerelease -output-format "{{.Major}}.{{.Minor}}.{{.Patch}}"-UAT-$BUILD_ID > VERSION            
         - image: ghcr.io/jenkins-x/jx-boot:3.10.124
           name: jx-variables
           resources: {}
