--- a/tasks/gradle/release.yaml
+++ b/tasks/gradle/release.yaml
@@ -43,7 +43,7 @@ spec:
           resources: {}
           script: |
             #!/usr/bin/env sh
-            jx-release-version --tag --debug > VERSION
+            jx-release-version -tag -debug -previous-version=from-tag:"^v\d+\.\d+\.\d+$" > VERSION
         - image: ghcr.io/jenkins-x/jx-release-version:2.7.0
           name: next-version-gradle-uat
           script: |
