--- a/tasks/maven-java17/release.yaml
+++ b/tasks/maven-java17/release.yaml
@@ -47,7 +47,7 @@ spec:
           resources: {}
           script: |
             #!/usr/bin/env sh
-            jx-release-version --tag --debug > VERSION
+            jx-release-version -tag -debug -previous-version=from-tag:"^v\d+\.\d+\.\d+$" > VERSION
         - image: ghcr.io/jenkins-x/jx-release-version:2.6.10
           name: next-version-uat
           script: |
