--- a/tasks/scala/release.yaml
+++ b/tasks/scala/release.yaml
@@ -47,7 +47,7 @@ spec:
           resources: {}
           script: |
             #!/usr/bin/env sh
-            jx-release-version --tag --debug > VERSION
+            jx-release-version -tag -debug -previous-version=from-tag:"^v\d+\.\d+\.\d+$" > VERSION
         - image: ghcr.io/jenkins-x/jx-boot:3.10.124
           name: jx-variables
           resources:
