added liquibase task for release

--- a/tasks/liquibase/release.yaml
+++ b/tasks/liquibase/release.yaml
@@ -53,6 +53,15 @@ spec:
             export LIQUIBASE_COMMAND_PASSWORD=$(cat ./PG_PASSWORD)
 
             liquibase update-testing-rollback --url jdbc:postgresql://dkv-pet-cloud-postgres.${RELEASE_NAMESPACE}.svc.cluster.local:5432/pet
+        - name: liquibase-tag
+          image: liquibase/liquibase:4.27
+          resources: {}
+          script: |
+            #!/bin/bash
+            source .jx/variables.sh
+            export LIQUIBASE_COMMAND_PASSWORD=$(cat ./PG_PASSWORD)
+
+            liquibase tag --tag=${VERSION} --url jdbc:postgresql://dkv-pet-cloud-postgres.${RELEASE_NAMESPACE}.svc.cluster.local:5432/pet
         - name: liquibase-drop-db
           image: liquibase/liquibase:4.27
           resources: {}
