Fix for pipelines result

--- a/tasks/maven-java17/pullrequest.yaml
+++ b/tasks/maven-java17/pullrequest.yaml
@@ -79,7 +79,7 @@ spec:
             git checkout master docs
             git add docs/
             git commit -am "Update karate tests gh-pages"
-            git push -f
+            git push
         - image: node:18-slim
           name: test-results-report
           resources: {}
