--- a/tasks/maven-java17/pullrequest.yaml
+++ b/tasks/maven-java17/pullrequest.yaml
@@ -101,6 +101,13 @@ spec:
             source .jx/variables.sh
             cp /tekton/creds-secrets/tekton-container-registry-auth/.dockerconfigjson /kaniko/.docker/config.json
             /kaniko/executor $KANIKO_FLAGS --context=/workspace/source --dockerfile=${DOCKERFILE_PATH:-Dockerfile} --destination=$PUSH_CONTAINER_REGISTRY/$DOCKER_REGISTRY_ORG/$APP_NAME:$VERSION
+        - image: quay.io/helmpack/chart-testing:v3.7.1
+          name: helm-chart-testing
+          resources: {}
+          script: |
+            #!/bin/bash
+            source .jx/variables.sh
+            ct lint --charts charts/* --validate-maintainers=false
         - image: ghcr.io/jenkins-x-plugins/jx-preview:0.4.7
           name: promote-jx-preview
           resources: {}
