--- a/tasks/maven-java17/pullrequest.yaml
+++ b/tasks/maven-java17/pullrequest.yaml
@@ -107,7 +107,7 @@ spec:
           script: |
             #!/bin/bash
             source .jx/variables.sh
-            ct lint --charts charts/* --validate-maintainers=false
+            ct lint --charts charts/$REPO_NAME --validate-maintainers=false
         - image: ghcr.io/jenkins-x-plugins/jx-preview:0.4.7
           name: promote-jx-preview
           resources: {}
