--- a/tasks/javascript-node18/release.yaml
+++ b/tasks/javascript-node18/release.yaml
@@ -102,7 +102,7 @@ spec:
                 #!/bin/bash
                 source .jx/variables.sh
                 npm publish
-            - image: sonarsource/sonar-scanner-cli:latest
+            - image: sonarsource/sonar-scanner-cli:5.0.1
               name: sonar-code-analisys
               resources: {}
               script: |
