--- a/tasks/typescript/pullrequest.yaml
+++ b/tasks/typescript/pullrequest.yaml
@@ -48,7 +48,7 @@ spec:
           script: |
             #!/bin/sh
             CI=true DISPLAY=:99 npm test
-        - image: sonarsource/sonar-scanner-cli:latest
+        - image: sonarsource/sonar-scanner-cli:5.0.1
           name: sonar-code-analisys
           resources: {}
           script: |
