--- a/tasks/javascript/release.yaml
+++ b/tasks/javascript/release.yaml
@@ -119,7 +119,8 @@ spec:
               -Dsonar.sources=. \
               -Dsonar.projectVersion=$VERSION \
               -Dsonar.host.url=$SONAR_URL \
-              -Dsonar.javascript.node.maxspace=8192
+              -Dsonar.javascript.node.maxspace=8192 \
+              -Dsonar.working.directory=/tmp/.scannerwork
         - image: ghcr.io/jenkins-x/jx-registry:0.1.10
           name: check-registry
           resources: {}
