added resource assignation to sonar scanner

--- a/tasks/typescript/release.yaml
+++ b/tasks/typescript/release.yaml
@@ -95,6 +95,19 @@ spec:
             source .jx/variables.sh
             npm publish
         - image: sonarsource/sonar-scanner-cli:11.0
+          name: sonar-code-analisys-2
+          resources: {}
+          command:
+            - sonar-scanner
+          args:
+            - -Dsonar.projectKey=$SONAR_PROJECT_KEY
+            - -Dsonar.exclusions=$SONAR_EXCLUSIONS
+            - -Dsonar.sourceEncoding=UTF-8
+            - -Dsonar.sources=.
+            - -Dsonar.projectVersion=$VERSION
+            - -Dsonar.host.url=$SONAR_URL
+            - -Dsonar.javascript.node.maxspace=8192
+        - image: sonarsource/sonar-scanner-cli:11.0
           name: sonar-code-analisys
           resources: {}
           script: |
@@ -109,8 +122,9 @@ spec:
               -Dsonar.sources=. \
               -Dsonar.projectVersion=$VERSION \
               -Dsonar.host.url=$SONAR_URL \
-              -Dsonar.javascript.node.maxspace=8192 \
-              -Dsonar.working.directory=/tmp/.scannerwork              
+              -Dsonar.javascript.node.maxspace=8192
+          securityContext:
+            runAsUser: 1000              
         - image: ghcr.io/jenkins-x/jx-registry:0.1.10
           name: check-registry
           resources: {}
