added resource assignation to sonar scanner

--- a/tasks/typescript/release.yaml
+++ b/tasks/typescript/release.yaml
@@ -122,7 +122,8 @@ spec:
               -Dsonar.sources=. \
               -Dsonar.projectVersion=$VERSION \
               -Dsonar.host.url=$SONAR_URL \
-              -Dsonar.javascript.node.maxspace=8192
+              -Dsonar.javascript.node.maxspace=8192 \
+              -Dsonar.working.directory=/tmp/.scannerwork
           securityContext:
             runAsUser: 1000              
         - image: ghcr.io/jenkins-x/jx-registry:0.1.10
