added resource assignation to sonar scanner

--- a/tasks/typescript/release.yaml
+++ b/tasks/typescript/release.yaml
@@ -114,7 +114,8 @@ spec:
             #!/bin/bash
             source .jx/variables.sh
             export SONAR_TOKEN=$SONAR_TOKEN
-            export SONAR_USER_HOME="/tmp/.scannerwork"            
+            export SONAR_USER_HOME="/tmp/.scannerwork"
+            sleep 6000                     
             sonar-scanner \
               -Dsonar.projectKey=$SONAR_PROJECT_KEY \
               -Dsonar.exclusions=$SONAR_EXCLUSIONS \
@@ -124,8 +125,6 @@ spec:
               -Dsonar.host.url=$SONAR_URL \
               -Dsonar.javascript.node.maxspace=8192 \
               -Dsonar.working.directory=/tmp/.scannerwork
-          securityContext:
-            runAsUser: 0
         - image: ghcr.io/jenkins-x/jx-registry:0.1.10
           name: check-registry
           resources: {}
