--- a/tasks/typescript/release.yaml
+++ b/tasks/typescript/release.yaml
@@ -111,6 +111,8 @@ spec:
               -Dsonar.host.url=$SONAR_URL \
               -Dsonar.javascript.node.maxspace=8192 \
               -Dsonar.working.directory=/tmp/.scannerwork
+          securityContext:
+            runAsUser: 0
         - image: ghcr.io/jenkins-x/jx-registry:0.1.10
           name: check-registry
           resources: {}
