added resource assignation to sonar scanner

--- a/tasks/typescript/release.yaml
+++ b/tasks/typescript/release.yaml
@@ -111,8 +111,7 @@ spec:
               -Dsonar.host.url=$SONAR_URL \
               -Dsonar.javascript.node.maxspace=8192 \
               -Dsonar.working.directory=/tmp/.scannerwork
-          securityContext:
-            runAsUser: 0
+            sleep 6000
         - image: ghcr.io/jenkins-x/jx-registry:0.1.10
           name: check-registry
           resources: {}
