--- a/tasks/typescript/release.yaml
+++ b/tasks/typescript/release.yaml
@@ -100,8 +100,8 @@ spec:
           script: |
             #!/bin/bash
             export SONAR_TOKEN=$SONAR_TOKEN
-            export SONAR_USER_HOME="/tmp/.scannerwork"
-            rm -rf /tmp/.scannerwork
+            whoami
+            ps aux
             sonar-scanner \
               -Dsonar.projectKey=$SONAR_PROJECT_KEY \
               -Dsonar.exclusions=$SONAR_EXCLUSIONS \
@@ -109,12 +109,8 @@ spec:
               -Dsonar.sources=. \
               -Dsonar.projectVersion=$VERSION \
               -Dsonar.host.url=$SONAR_URL \
-              -Dsonar.javascript.node.maxspace=8192 \
-              -Dsonar.working.directory=/tmp/.scannerwork
+              -Dsonar.javascript.node.maxspace=8192
             sleep 6000
-          securityContext:
-            runAsNonRoot: true
-            runAsUser: 1000
         - image: ghcr.io/jenkins-x/jx-registry:0.1.10
           name: check-registry
           resources: {}
