--- a/tasks/javascript/release.yaml
+++ b/tasks/javascript/release.yaml
@@ -111,7 +111,6 @@ spec:
             #!/bin/bash
             source .jx/variables.sh
             export SONAR_TOKEN=$SONAR_TOKEN
-            export SONAR_USER_HOME="/tmp/.scannerwork"
             sonar-scanner \
               -Dsonar.projectKey=$SONAR_PROJECT_KEY \
               -Dsonar.exclusions=$SONAR_EXCLUSIONS \
@@ -119,8 +118,7 @@ spec:
               -Dsonar.sources=. \
               -Dsonar.projectVersion=$VERSION \
               -Dsonar.host.url=$SONAR_URL \
-              -Dsonar.javascript.node.maxspace=8192 \
-              -Dsonar.working.directory=/tmp/.scannerwork
+              -Dsonar.javascript.node.maxspace=8192
         - image: ghcr.io/jenkins-x/jx-registry:0.1.10
           name: check-registry
           resources: {}
