added resource assignation to sonar scanner

--- a/tasks/typescript/release.yaml
+++ b/tasks/typescript/release.yaml
@@ -99,6 +99,7 @@ spec:
           resources: {}
           script: |
             #!/bin/bash
+            source .jx/variables.sh
             export SONAR_TOKEN=$SONAR_TOKEN
             sonar-scanner \
               -Dsonar.projectKey=$SONAR_PROJECT_KEY \
