--- a/tasks/maven-java17/pullrequest.yaml
+++ b/tasks/maven-java17/pullrequest.yaml
@@ -53,6 +53,24 @@ spec:
             #!/usr/bin/env bash
             source .jx/variables.sh
             mvn --no-transfer-progress install
+        - image: sonarsource/sonar-scanner-cli:11.0
+          name: sonar-code-analisys-pr
+          resources: {}
+          script: |
+            #!/bin/bash
+            source .jx/variables.sh
+            export SONAR_TOKEN=$SONAR_TOKEN
+            sonar-scanner \
+              -Dsonar.projectKey=$SONAR_PROJECT_KEY \
+              -Dsonar.pullrequest.key=$PULL_NUMBER \
+              -Dsonar.pullrequest.branch=$PULL_PULL_REF \
+              -Dsonar.pullrequest.base=$PULL_BASE_REF \
+              -Dsonar.exclusions=$SONAR_EXCLUSIONS \
+              -Dsonar.sourceEncoding=UTF-8 \
+              -Dsonar.sources=. \
+              -Dsonar.projectVersion=$VERSION \
+              -Dsonar.host.url=$SONAR_URL \
+              -Dsonar.javascript.node.maxspace=8192            
         - image: maven:3.8.2-openjdk-17
           name: mvn-karate-tests
           resources: {}
