--- a/tasks/maven-java17/pullrequest.yaml
+++ b/tasks/maven-java17/pullrequest.yaml
@@ -63,7 +63,7 @@ spec:
             sonar-scanner \
               -Dsonar.projectKey=$SONAR_PROJECT_KEY \
               -Dsonar.pullrequest.key=$PULL_NUMBER \
-              -Dsonar.pullrequest.branch=$PULL_PULL_REF \
+              -Dsonar.pullrequest.branch=$PULL_PULL_SHA \
               -Dsonar.pullrequest.base=$PULL_BASE_REF \
               -Dsonar.exclusions=$SONAR_EXCLUSIONS \
               -Dsonar.sourceEncoding=UTF-8 \
