--- a/tasks/maven-java17/pullrequest.yaml
+++ b/tasks/maven-java17/pullrequest.yaml
@@ -59,17 +59,13 @@ spec:
           script: |
             #!/bin/bash
             source .jx/variables.sh
-            export SONAR_TOKEN=$SONAR_TOKEN
-            sonar-scanner \
+            mvn sonar:sonar -X \
+              -Dsonar.token=$SONAR_TOKEN \
+              -Dsonar.host.url=$SONAR_URL \ 
               -Dsonar.projectKey=$SONAR_PROJECT_KEY \
-              -Dsonar.pullrequest.key=$PULL_NUMBER \
               -Dsonar.exclusions=$SONAR_EXCLUSIONS \
-              -Dsonar.sourceEncoding=UTF-8 \
-              -Dsonar.sources=. \
-              -Dsonar.projectVersion=$VERSION \
-              -Dsonar.host.url=$SONAR_URL \
-              -Dsonar.java.binaries=$TARGET_DIR \
-              -Dsonar.javascript.node.maxspace=8192            
+              -Dsonar.pullrequest.key=$PULL_NUMBER \
+              -Dsonar.javascript.node.maxspace=8192
         - image: maven:3.8.2-openjdk-17
           name: mvn-karate-tests
           resources: {}
