--- a/tasks/maven-java17/pullrequest.yaml
+++ b/tasks/maven-java17/pullrequest.yaml
@@ -53,13 +53,13 @@ spec:
             #!/usr/bin/env bash
             source .jx/variables.sh
             mvn --no-transfer-progress install
-        - image: sonarsource/sonar-scanner-cli:11.0
-          name: sonar-code-analisys-pr
+        - image: maven:3.8.2-openjdk-17
+          name: maven-sonar-code-analisys-pr
           resources: {}
           script: |
             #!/bin/bash
             source .jx/variables.sh
-            mvn sonar:sonar -X \
+            mvn sonar:sonar \
               -Dsonar.token=$SONAR_TOKEN \
               -Dsonar.host.url=$SONAR_URL \ 
               -Dsonar.projectKey=$SONAR_PROJECT_KEY \
