--- a/tasks/maven-java17/pullrequest.yaml
+++ b/tasks/maven-java17/pullrequest.yaml
@@ -59,7 +59,7 @@ spec:
           script: |
             #!/bin/bash
             source .jx/variables.sh
-            mvn sonar:sonar \
+            mvn --no-transfer-progress sonar:sonar \
               -Dsonar.token=$SONAR_TOKEN \
               -Dsonar.host.url=$SONAR_URL \
               -Dsonar.projectKey=$SONAR_PROJECT_KEY \
