--- a/tasks/maven-java17/pullrequest.yaml
+++ b/tasks/maven-java17/pullrequest.yaml
@@ -65,8 +65,9 @@ spec:
               -Dsonar.projectKey=$SONAR_PROJECT_KEY \
               -Dsonar.exclusions=$SONAR_EXCLUSIONS \
               -Dsonar.pullrequest.key=$PULL_NUMBER \
-              -Dsonar.pullrequest.branch=$GIT_BRANCH \
+              -Dsonar.pullrequest.branch=$PR_HEAD_REF \
               -Dsonar.pullrequest.base=$PULL_BASE_REF \
+              -Dsonar.qualitygate.wait=true \
               -Dsonar.javascript.node.maxspace=8192
         - image: maven:3.8.2-openjdk-17
           name: mvn-karate-tests
