--- a/tasks/maven-java17/pullrequest.yaml
+++ b/tasks/maven-java17/pullrequest.yaml
@@ -54,6 +54,19 @@ spec:
             source .jx/variables.sh
             mvn --no-transfer-progress install
         - image: maven:3.8.2-openjdk-17
+          name: maven-sonar-code-analisys
+          resources: {}
+          script: |
+            #!/bin/bash
+            source .jx/variables.sh
+            mvn --no-transfer-progress sonar:sonar \
+              -Dsonar.token=$SONAR_TOKEN \
+              -Dsonar.host.url=$SONAR_URL \
+              -Dsonar.projectKey=$SONAR_PROJECT_KEY \
+              -Dsonar.branch.name=$PULL_BASE_REF \
+              -Dsonar.exclusions=$SONAR_EXCLUSIONS \
+              -Dsonar.javascript.node.maxspace=8192
+        - image: maven:3.8.2-openjdk-17
           name: maven-sonar-code-analisys-pr
           resources: {}
           script: |
