--- a/tasks/maven-java17/pullrequest.yaml
+++ b/tasks/maven-java17/pullrequest.yaml
@@ -60,6 +60,7 @@ spec:
             #!/bin/bash
             source .jx/variables.sh
             mvn --no-transfer-progress sonar:sonar \
+              -Dsonar.projectName=$APP_NAME \
               -Dsonar.token=$SONAR_TOKEN \
               -Dsonar.host.url=$SONAR_URL \
               -Dsonar.projectKey=$SONAR_PROJECT_KEY \
@@ -73,6 +74,7 @@ spec:
             #!/bin/bash
             source .jx/variables.sh
             mvn --no-transfer-progress sonar:sonar \
+              -Dsonar.projectName=$APP_NAME \            
               -Dsonar.token=$SONAR_TOKEN \
               -Dsonar.host.url=$SONAR_URL \
               -Dsonar.projectKey=$SONAR_PROJECT_KEY \
@@ -81,6 +83,7 @@ spec:
               -Dsonar.pullrequest.branch=$PR_HEAD_REF \
               -Dsonar.pullrequest.base=$PULL_BASE_REF \
               -Dsonar.scm.revision=$PR_HEAD_SHA \
+              -Dsonar.maven.scanAll=true \
               -Dsonar.javascript.node.maxspace=8192
         - image: maven:3.8.2-openjdk-17
           name: mvn-karate-tests
