--- a/tasks/maven-java17/release.yaml
+++ b/tasks/maven-java17/release.yaml
@@ -98,7 +98,22 @@ spec:
             echo "upgrading the pom to version $VERSION"
             mvn versions:set -DnewVersion=$VERSION
 
-            mvn --no-transfer-progress install            
+            mvn --no-transfer-progress install
+        - image: maven:3.8.2-openjdk-17
+          name: maven-sonar-code-analisys
+          resources: {}
+          script: |
+            #!/bin/bash
+            source .jx/variables.sh
+            mvn --no-transfer-progress sonar:sonar \
+              -Dsonar.projectName=$APP_NAME \
+              -Dsonar.token=$SONAR_TOKEN \
+              -Dsonar.host.url=$SONAR_URL \
+              -Dsonar.projectKey=$SONAR_PROJECT_KEY \
+              -Dsonar.branch.name=$PULL_BASE_REF \
+              -Dsonar.exclusions=$SONAR_EXCLUSIONS \
+              -Dsonar.maven.scanAll=true \
+              -Dsonar.javascript.node.maxspace=8192                        
         - image: ghcr.io/jenkins-x/jx-registry:0.1.10
           name: check-registry
           resources: {}
