--- a/tasks/typescript/pullrequest.yaml
+++ b/tasks/typescript/pullrequest.yaml
@@ -54,15 +54,32 @@ spec:
           script: |
             #!/bin/bash
             source .jx/variables.sh
-            export SONAR_TOKEN=$SONAR_TOKEN
             sonar-scanner \
+              -Dsonar.projectName=$APP_NAME \
+              -Dsonar.token=$SONAR_TOKEN \
+              -Dsonar.host.url=$SONAR_URL \
+              -Dsonar.projectKey=$SONAR_PROJECT_KEY \
+              -Dsonar.branch.name=$PULL_BASE_REF \
+              -Dsonar.exclusions=$SONAR_EXCLUSIONS \
+              -Dsonar.maven.scanAll=true \
+              -Dsonar.javascript.node.maxspace=8192
+        - image: sonarsource/sonar-scanner-cli:11.0
+          name: sonar-code-analisys-pr
+          resources: {}
+          script: |
+            #!/bin/bash
+            source .jx/variables.sh
+            sonar-scanner \
+              -Dsonar.projectName=$APP_NAME \
+              -Dsonar.token=$SONAR_TOKEN \
+              -Dsonar.host.url=$SONAR_URL \
               -Dsonar.projectKey=$SONAR_PROJECT_KEY \
               -Dsonar.exclusions=$SONAR_EXCLUSIONS \
-              -Dsonar.sourceEncoding=UTF-8 \
-              -Dsonar.sources=. \
-              -Dsonar.projectVersion=$VERSION \
-              -Dsonar.host.url=$SONAR_URL \
-              -Dsonar.javascript.node.maxspace=8192
+              -Dsonar.pullrequest.key=$PULL_NUMBER \
+              -Dsonar.pullrequest.branch=$PR_HEAD_REF \
+              -Dsonar.pullrequest.base=$PULL_BASE_REF \
+              -Dsonar.scm.revision=$PR_HEAD_SHA \
+              -Dsonar.javascript.node.maxspace=8192              
         - image: ghcr.io/jenkins-x/jx-registry:0.1.10
           name: check-registry
           resources: {}
