--- a/tasks/typescript/pullrequest.yaml
+++ b/tasks/typescript/pullrequest.yaml
@@ -47,7 +47,7 @@ spec:
           resources: {}
           script: |
             #!/bin/sh
-            CI=true DISPLAY=:99 npm test
+            CI=true DISPLAY=:99 npm run test:run
         - image: sonarsource/sonar-scanner-cli:11.0
           name: sonar-code-analisys
           resources: {}
