--- a/tasks/environment/pullrequest.yaml
+++ b/tasks/environment/pullrequest.yaml
@@ -45,7 +45,7 @@ spec:
               -Dsonar.host.url=$SONAR_URL \
               -Dsonar.projectKey=$SONAR_PROJECT_KEY \
               -Dsonar.branch.name=$PULL_BASE_REF \
-              -Dsonar.exclusions=$SONAR_INCLUSIONS \
+              -Dsonar.inclusions=$SONAR_INCLUSIONS \
               -Dsonar.javascript.node.maxspace=8192
         - image: sonarsource/sonar-scanner-cli:11.0
           name: sonar-code-analisys-pr
@@ -57,7 +57,7 @@ spec:
               -Dsonar.token=$SONAR_TOKEN \
               -Dsonar.host.url=$SONAR_URL \
               -Dsonar.projectKey=$SONAR_PROJECT_KEY \
-              -Dsonar.exclusions=$SONAR_EXCLUSIONS \
+              -Dsonar.inclusions=$SONAR_EXCLUSIONS \
               -Dsonar.pullrequest.key=$PULL_NUMBER \
               -Dsonar.pullrequest.branch=$PR_HEAD_REF \
               -Dsonar.pullrequest.base=$PULL_BASE_REF \
