--- a/tasks/environment/pullrequest.yaml
+++ b/tasks/environment/pullrequest.yaml
@@ -23,6 +23,17 @@ spec:
             limits: {}
           workingDir: /workspace/source
         steps:
+        - image: ghcr.io/jenkins-x/jx-boot:3.10.124
+          name: jx-variables
+          resources:
+            # set requests for the pod here
+            requests:
+              cpu: 400m
+              memory: 512Mi
+          script: |
+            #!/usr/bin/env sh
+            jx gitops variables
+            jx gitops pr variables        
         - args:
           - pr
           command:
@@ -39,6 +50,7 @@ spec:
           resources: {}
           script: |
             #!/bin/bash
+            source .jx/variables.sh            
             sonar-scanner \
               -Dsonar.projectName=$APP_NAME \
               -Dsonar.token=$SONAR_TOKEN \
@@ -52,6 +64,7 @@ spec:
           resources: {}
           script: |
             #!/bin/bash
+            source .jx/variables.sh            
             sonar-scanner \
               -Dsonar.projectName=$APP_NAME \
               -Dsonar.token=$SONAR_TOKEN \
