--- a/tasks/environment/pullrequest.yaml
+++ b/tasks/environment/pullrequest.yaml
@@ -32,8 +32,8 @@ spec:
               memory: 512Mi
           script: |
             #!/usr/bin/env sh
-            jx gitops variables
-            jx gitops pr variables        
+            jx gitops variables --commit false
+            jx gitops pr variables
         - args:
           - pr
           command:
