--- a/tasks/environment/pullrequest.yaml
+++ b/tasks/environment/pullrequest.yaml
@@ -32,7 +32,7 @@ spec:
               memory: 512Mi
           script: |
             #!/usr/bin/env sh
-            jx gitops variables --commit false
+            jx gitops variables --commit=false
             jx gitops pr variables
         - args:
           - pr
