--- a/tasks/typescript/release.yaml
+++ b/tasks/typescript/release.yaml
@@ -23,7 +23,9 @@ spec:
           name: ""
           resources:
             limits: {}
-          volumeMounts: []
+          volumeMounts:
+          - mountPath: /tekton/home/npm
+            name: npmrc          
           workingDir: /workspace/source
         steps:
         - env:
@@ -201,6 +203,12 @@ spec:
           secret:
             optional: true
             secretName: npmrc
+        workspaces:
+          - name: source
+            description: |
+              Default Workspace
+            optional: false
+            mountPath: /workspace/source            
   podTemplate: {}
   serviceAccountName: tekton-bot
   timeout: 12h0m0s
