--- a/tasks/typescript/release.yaml
+++ b/tasks/typescript/release.yaml
@@ -23,9 +23,7 @@ spec:
           name: ""
           resources:
             limits: {}
-          volumeMounts:
-          - mountPath: /tekton/home/npm
-            name: npmrc          
+          volumeMounts: []
           workingDir: /workspace/source
         steps:
         - env:
@@ -60,7 +58,7 @@ spec:
           script: |
             #!/usr/bin/env sh
             jx-release-version -debug -next-version=from-file:package.json -output-format "{{.Major}}.{{.Minor}}.{{.Patch}}"-UAT-$BUILD_ID > VERSION
-        - image: ghcr.io/jenkins-x/jx-boot:3.10.158
+        - image: ghcr.io/jenkins-x/jx-boot:3.10.124
           name: jx-variables
           resources:
             # set requests for the pod here
@@ -132,7 +130,7 @@ spec:
               --dockerfile=${DOCKERFILE_PATH:-Dockerfile} \
               --destination=$PUSH_CONTAINER_REGISTRY/$DOCKER_REGISTRY_ORG/$APP_NAME:$VERSION \
               --destination=$PUSH_CONTAINER_REGISTRY/$DOCKER_REGISTRY_ORG/$APP_NAME:latest
-        - image: ghcr.io/jenkins-x/jx-boot:3.10.158
+        - image: ghcr.io/jenkins-x/jx-boot:3.10.124
           name: promote-changelog-uat
           resources: {}
           script: |
@@ -150,7 +148,7 @@ spec:
             git commit -a -m "chore: release $VERSION" --allow-empty
             git tag -fa v$VERSION -m "Pre-release version $VERSION"
             git push --force origin v$VERSION
-        - image: ghcr.io/jenkins-x/jx-boot:3.10.158
+        - image: ghcr.io/jenkins-x/jx-boot:3.10.124
           name: promote-changelog
           resources: {}
           script: |
@@ -177,7 +175,7 @@ spec:
             #!/bin/ash
             if [ -d "charts/$REPO_NAME" ]; then cd charts/$REPO_NAME
             helm-docs; else echo no charts; fi
-        - image: ghcr.io/jenkins-x/jx-boot:3.10.158
+        - image: ghcr.io/jenkins-x/jx-boot:3.10.124
           name: promote-helm-release
           resources: {}
           script: |
@@ -203,12 +201,6 @@ spec:
           secret:
             optional: true
             secretName: npmrc
-        workspaces:
-          - name: source
-            description: |
-              Default Workspace
-            optional: false
-            mountPath: /workspace/source            
   podTemplate: {}
   serviceAccountName: tekton-bot
   timeout: 12h0m0s
