--- a/tasks/maven-java17/pullrequest.yaml
+++ b/tasks/maven-java17/pullrequest.yaml
@@ -89,7 +89,7 @@ spec:
           resources: {}
           script: |
             # Scan all for reporting in pipeline
-            trivy fs . --scanners vuln --include-dev-deps --format json --db-repository public.ecr.aws/aquasecurity/trivy-db:2 --output /workspace/source/scanresults.json
+            trivy fs . --scanners vuln --include-dev-deps --format json --db-repository public.ecr.aws/aquasecurity/trivy-db:2 --output /workspace/source/scanresults.json --skip-dirs --skip-dirs versionStream
         - image: ghcr.io/jenkins-x/jx-boot:3.10.158
           name: comment-pr
           resources: {}
