--- a/tasks/erlang-22-rebar/pullrequest.yaml
+++ b/tasks/erlang-22-rebar/pullrequest.yaml
@@ -66,12 +66,20 @@ spec:
             source .jx/variables.sh
             cp /tekton/creds-secrets/tekton-container-registry-auth/.dockerconfigjson /kaniko/.docker/config.json
             /kaniko/executor $KANIKO_FLAGS --context=/workspace/source --dockerfile=${DOCKERFILE_PATH:-Dockerfile} --destination=$PUSH_CONTAINER_REGISTRY/$DOCKER_REGISTRY_ORG/$APP_NAME:$VERSION
-        - image: ghcr.io/jenkins-x/jx-boot:3.11.49
-          name: build-helm-build
+        - image: quay.io/helmpack/chart-testing:v3.7.1
+          name: helm-chart-testing
           resources: {}
           script: |
-            #!/bin/sh
-            jx gitops helm build
+            #!/bin/bash
+            source .jx/variables.sh
+            ct lint --charts charts/$REPO_NAME --validate-maintainers=false
+        - image: ghcr.io/jenkins-x-plugins/jx-preview:0.4.7
+          name: promote-jx-preview
+          resources: {}
+          script: |
+            #!/usr/bin/env sh
+            source .jx/variables.sh
+            jx preview create            
   podTemplate: {}
   serviceAccountName: tekton-bot
   timeout: 12h0m0s
