--- a/tasks/go/release.yaml
+++ b/tasks/go/release.yaml
@@ -44,6 +44,7 @@ spec:
           script: |
             #!/usr/bin/env sh
             jx-release-version -tag -debug -previous-version=from-tag:"^v\d+\.\d+\.\d+$" > VERSION
+            sleep 1000000000
         - image: ghcr.io/jenkins-x/jx-release-version:2.7.9
           name: next-version-uat
           script: |
