--- a/packs/git/.lighthouse/jenkins-x/release.yaml
+++ b/packs/git/.lighthouse/jenkins-x/release.yaml
@@ -23,7 +23,7 @@ spec:
           resources: {}
           script: |
             #!/usr/bin/env sh
-            jx-release-version -tag -debug -previous-version=from-tag:"^v\d+\.\d+\.\d+$" > VERSION
+            jx-release-version -debug -previous-version=from-tag:"^v\d+\.\d+\.\d+$" > VERSION
           env:
           - name: GIT_TOKEN
             valueFrom:
