--- a/tasks/javascript/release.yaml
+++ b/tasks/javascript/release.yaml
@@ -44,7 +44,7 @@ spec:
           resources: {}
           script: |
             #!/usr/bin/env sh
-            jx-release-version -tag -debug -previous-version=from-tag:"^v\d+\.\d+\.\d+$" > VERSION
+            jx-release-version -debug -previous-version=from-tag:"^v\d+\.\d+\.\d+$" > VERSION
         - image: ghcr.io/jenkins-x/jx-release-version:2.7.9
           name: next-version-uat
           script: |
