--- a/tasks/rust/release.yaml
+++ b/tasks/rust/release.yaml
@@ -39,7 +39,7 @@ spec:
           resources: {}
           script: |
             #!/usr/bin/env sh
-            jx-release-version -tag -debug -previous-version=from-tag:"^v\d+\.\d+\.\d+$" > VERSION
+            jx-release-version -debug -previous-version=from-tag:"^v\d+\.\d+\.\d+$" > VERSION
         - image: ghcr.io/jenkins-x/jx-boot:3.11.107
           name: jx-variables
           resources:
